Some small layout changes; Fixed bug of flickering menu;

--- a/static/main.css
+++ b/static/main.css
@@ -129,31 +129,35 @@ nav.mobile {
  * @link https://github.com/jonsuh/hamburgers
  */
 .hamburger {
-  padding: 15px 15px;
-  display: inline-block;
-  cursor: pointer;
-  transition-property: opacity, filter, background-color;
-  transition-duration: 0.15s;
-  transition-timing-function: linear;
-  font: inherit;
-  color: inherit;
-  text-transform: none;
-  background-color: transparent;
-  border: 0;
-  margin: 0;
-  overflow: visible; }
-  .hamburger:hover {
-    opacity: 0.7; }
-  .hamburger.is-active:hover {
-    opacity: 1; }
-  .hamburger.is-active .hamburger-inner,
-  .hamburger.is-active .hamburger-inner::before,
-  .hamburger.is-active .hamburger-inner::after {
-    background-color: #000; }
-  .hamburger.is-active .hamburger-inner,
-  .hamburger.is-active .hamburger-inner::after {
+    padding: 15px 15px;
+    display: inline-block;
+    cursor: pointer;
+    transition-property: opacity, filter, background-color;
+    transition-duration: 0.15s;
+    transition-timing-function: linear;
+    font: inherit;
+    color: inherit;
+    text-transform: none;
+    background-color: transparent;
+    border: 0;
+    margin: 0;
+    overflow: visible;
+}
+.hamburger:hover {
+    opacity: 0.7;
+}
+.hamburger.is-active:hover {
+    opacity: 1;
+}
+.hamburger.is-active .hamburger-inner,
+.hamburger.is-active .hamburger-inner::before,
+.hamburger.is-active .hamburger-inner::after {
+    background-color: #000;
+}
+.hamburger.is-active .hamburger-inner,
+.hamburger.is-active .hamburger-inner::after {
     background-color: #FFF;
-  }
+}
 
 .hamburger-box {
   width: 40px;
@@ -206,6 +210,12 @@ nav.mobile {
 .hamburger:focus { outline: 0; }
 @media only screen and (min-width:767px) {
     .hamburger {
+        display: none;
+    }
+}
+
+@media only screen and (min-width:768px) { 
+    .overlay {
         display: none;
     }
 }
@@ -422,9 +432,10 @@ section#contact {
     font-weight: 600;
     margin-bottom: 2em;
 }
-section#contact h2 {
+section#contact div.pitch {
     font-size: 2.5em;
     font-weight: 700;
+    margin-bottom: 0.5em;
 }
 section#contact .location {
     margin-top: 1em;
